--- a/_includes/home.html
+++ b/_includes/home.html
@@ -18,7 +18,7 @@
       <span class="title"><span class="label-emoji">📚</span>&nbsp;메인 카테고리 게시물</span>
       <div class="home_post_table">
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>증강 현실 <english>Mixed Reality</english></div>
+          <div class="home_post_table_title">  증강 현실 <english>Mixed Reality</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
@@ -37,7 +37,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>유니티 <english>Unity</english></div>
+          <div class="home_post_table_title">  유니티 <english>Unity</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
@@ -56,7 +56,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>그래픽스 <english>Graphics</english></div>
+          <div class="home_post_table_title">  그래픽스 <english>Graphics</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
@@ -75,7 +75,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>웹 프론트엔드 <english>Web</english></div>
+          <div class="home_post_table_title">  웹 프론트엔드 <english>Web</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
@@ -94,7 +94,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>파이썬 <english>Python</english></div>
+          <div class="home_post_table_title"> 파이썬 <english>Python</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
@@ -113,7 +113,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>인공 지능 <english>Arificial Intelligence</english></div>
+          <div class="home_post_table_title">  인공 지능 <english>Arificial Intelligence</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
@@ -132,7 +132,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>토이 프로젝트 <english>ToyProject</english></div>
+          <div class="home_post_table_title">  토이 프로젝트 <english>ToyProject</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
@@ -151,7 +151,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title"> <i class="fab fa-unity"></i>알고리즘 <english>Algorithm</english></div>
+          <div class="home_post_table_title">  알고리즘 <english>Algorithm</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
