--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -6,7 +6,7 @@
   </div>
   <div class="aboutme_title">
     <span class="aboutme_title_ko">김영찬</span> <span class="aboutme_title_en">Kim Young Chan</span>
-    <span class="aboutme_subtitle">디지털 트윈 & 3D 환경 개발자</span>
+    <span class="aboutme_subtitle">디지털 트윈 & 프론트엔드 어플리케이션 개발자</span>
   </div >
 
   <div class="aboutme_section">
