--- a/_includes/home.html
+++ b/_includes/home.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="home_post_table_category">
-          <div class="home_post_table_title">  웹 프론트엔드 <english>Web</english></div>
+          <div class="home_post_table_title">  웹 CSS / JS <english>Web</english></div>
           <div class="home_post_table_contents">
             <table>
               <tr class="home_post_table_head">
