update comment function

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,6 +50,7 @@ layout: main
           <script src="https://utteranc.es/client.js"
                   repo="KimYC1223/KimYC1223.github.io"
                   theme="github-light"
+                  issue-term="pathname"
                   crossorigin="anonymous"
                   async>
           </script>
