update unity asset store publisher profile

--- a/_includes/side_bar_left.html
+++ b/_includes/side_bar_left.html
@@ -33,14 +33,14 @@
       <div class="side_bar_button" id="side_bar_github">
         <i class="fab fa-github-alt"></i> <span>GitHub Profile</span>
       </div>
+      <div class="side_bar_button" id="side_bar_assetstore">
+        <i class="fa-brands fa-unity"></i><span>Unity publisher profile</span>
+      </div>
       <div class="side_bar_button" id="side_bar_steam">
         <i class="fab fa-steam-symbol"></i> <span>Steam Profile</span>
       </div>
       <div class="side_bar_button" id="side_bar_facebook">
         <i class="fab fa-facebook-square"></i> <span>Facebook</span>
-      </div>
-      <div class="side_bar_button" id="side_bar_assetstore">
-        <i class="fa-brands fa-unity"></i><span>Facebook</span>
       </div>
 
       <script>
