update NHN post

--- a/_includes/side_bar_left.html
+++ b/_includes/side_bar_left.html
@@ -6,7 +6,7 @@
       <script>
         thumbnail = document.getElementById('side_bar_MyThumbnail')
         thumbnail.addEventListener('click', () => {
-          location.href = "/"
+          location.href = "https://github.com/KimYC1223"
         })
       </script>
       <div class='side_bar_emoji'>
