--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -26,6 +26,12 @@
 	}
 }
 
+.post-content img {
+	display: block;
+	margin-top: 40px !important;
+	margin-bottom: 40px !important;
+}
+
 //project header
 
 .project-header {
@@ -73,6 +79,8 @@
 
 			.thumbnail {
 				margin-right: 0;
+				top: 0;
+				margin: 0 !important;
 			}
 
 			.name {
@@ -465,10 +473,25 @@ video {
 }
 
 .post table {
-	width: 90%;
+	width: 100%;
 	background-color: #fbfbfb;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border: 1px solid rgb(176, 176, 176);
+	border-collapse: collapse;
+}
+
+.post table td {
 	padding: 5px 20px;
+}
+
+.post thead tr th{
+	background-color: #cdcdcd;
+	text-align: center !important;
+	padding: 8px 20px;
+	margin-bottom: 5px;
+}
+
+.post h2 {
+	margin-bottom: 15px;
 }
