--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -6,7 +6,7 @@
   </div>
   <div class="aboutme_title">
     <span class="aboutme_title_ko">김영찬</span> <span class="aboutme_title_en">Kim Young Chan</span>
-    <span class="aboutme_subtitle">디지털 트윈 & 프론트엔드 어플리케이션 개발자</span>
+    <span class="aboutme_subtitle">Unity 엔진 & SDK 개발자</span>
   </div >
 
   <div class="aboutme_section">
@@ -33,6 +33,10 @@
         <div class="text_badge" id="aboutme_badge_steam">
           <span class="text_badge_head"><i class="fab fa-steam-symbol"></i></span>
           <span class = "text_badge_content">steam</span>
+        </div>
+        <div class="text_badge" id="aboutme_badge_assetstore">
+          <span class="text_badge_head"><i class="fa-brands fa-unity"></i></span>
+          <span class = "text_badge_content">Assetstore publisher profile</span>
         </div>
       </div>
     </div>
@@ -62,6 +66,11 @@
       aboutme_badge_steam.addEventListener('click', () => {
         location.href = "https://steamcommunity.com/id/kimyc1223?l=korean"
       })
+
+      aboutme_badge_assetstore = document.getElementById('aboutme_badge_assetstore')
+      aboutme_badge_assetstore.addEventListener('click', () => {
+        location.href = "https://assetstore.unity.com/publishers/73611"
+      })
     </script>
   </div>
 
@@ -71,7 +80,7 @@
       <ul>
         <li>
           <table><tr><td><i class="fas fa-chevron-right"></i></td>
-          <td><span>컴퓨터 공학을 전공하고 디지털 트윈 분야에서 연구 개발을 하고 있는 연구원입니다.</span></td></tr></table>
+          <td><span>컴퓨터 공학을 전공하고 Unity 엔진 SDK개발을 하고 있는 개발자입니다.</span></td></tr></table>
         </li>
         <li>
           <table><tr><td><i class="fas fa-chevron-right"></i></td>
