--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <meta itemprop="image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% elsif page.recruit == true %}{{ site.url }}{{'/meta/meta_recruit_image.png'}}{% else %}{{ site.url }}{{'/meta/meta_image.png'}}{% endif %}">
 
   <!-- Facebook Meta Tags -->
-  <!-- <meta property="og:url" content="{{ site.baseurl }}"> -->
+  <meta property="og:url" content="{{ site.baseurl }}">
   <meta property="og:type" content="{% if page.post-header == true or page.project-header == true %}article{% else %}website{% endif %}">
   <meta property="og:title" content="{% if page.home == true %}{{ site.title }}{% elsif page.main == true %}{{ page.title }} | {{ site.title }}{% else %}{{ page.title }}{% endif %}">
   <meta property="og:description" content="{% if page.home == true %}{{ site.description }}{% else %}{{ site:title }}{% endif %}">
