update life style post

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -11,7 +11,7 @@
 
   <div class="aboutme_section">
     <div class="aboutme_greeting">
-      안녕하세요, 어제보다 더 성장할 나를 위해 노력하는 김영찬 입니다. 현재 한국전자기술연구원에서 디지털 트윈 분야를 연구하고 있습니다.
+      안녕하세요, 어제보다 더 성장할 나를 위해 노력하는 김영찬 입니다. 현재 NHN에서 Unity SDK를 개발하고 있습니다.
       <div class="aboutme_greeting_subdiv">
         <div class="aboutme_greeting_subtitle">SNS</div>
         <div class="text_badge" id="aboutme_badge_github">
