--- a/_includes/mention.html
+++ b/_includes/mention.html
@@ -1,4 +1,11 @@
 {% assign writer = site.data.members | where: 'id', mention.writer | first %}
+<style>
+  .hyperlink {
+    color : #9166fc;
+    font-weight: bold;
+    text-decoration : underline;
+  }
+</style>
 <div class="branch_line"></div>
 <div class="branch_point"></div>
 <div class="thumbnail">
