--- a/_includes/side_bar_left.html
+++ b/_includes/side_bar_left.html
@@ -19,10 +19,10 @@
         김영찬
       </div>
       <div class="side_bar_work_en">
-        Korea Electronics Technology Institute Researcher
+        NHN <br>Team Game Platform Client
       </div>
       <div class="side_bar_work_kr">
-        한국전자기술연구원<br /> 에너지IT융합연구센터 연구원
+        NHN<br /> 게임플랫폼클라팀
       </div>
       <div class="side_bar_button" id="side_bar_enmail_1">
         <i class="far fa-envelope"></i> <span>kau_esc@naver.com</span>
