--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -52,43 +52,43 @@
     <script>
       aboutme_badge_github = document.getElementById("aboutme_badge_github");
       aboutme_badge_github.addEventListener("click", () => {
-        location.href = "https://github.com/KimYC1223";
+        location.href = "https://github.com/charlieppark";
       });
 
-      aboutme_badge_facebook = document.getElementById(
-        "aboutme_badge_facebook"
-      );
-      aboutme_badge_facebook.addEventListener("click", () => {
-        location.href =
-          "https://www.facebook.com/profile.php?id=100000498178589";
-      });
+      // aboutme_badge_facebook = document.getElementById(
+      //   "aboutme_badge_facebook"
+      // );
+      // aboutme_badge_facebook.addEventListener("click", () => {
+      //   location.href =
+      //     "https://www.facebook.com/profile.php?id=100000498178589";
+      // });
 
       aboutme_badge_linkedin = document.getElementById(
         "aboutme_badge_linkedin"
       );
       aboutme_badge_linkedin.addEventListener("click", () => {
-        location.href =
-          "https://www.linkedin.com/in/%EC%98%81%EC%B0%AC-%EA%B9%80-2b9aa9209/";
+        location.href = "https://www.linkedin.com/in/charlieppark/";
       });
 
       aboutme_badge_solvedac = document.getElementById(
         "aboutme_badge_solvedac"
       );
       aboutme_badge_solvedac.addEventListener("click", () => {
-        location.href = "https://solved.ac/profile/kimyc1223";
+        location.href = "https://solved.ac/profile/chanho0309";
       });
 
       aboutme_badge_steam = document.getElementById("aboutme_badge_steam");
       aboutme_badge_steam.addEventListener("click", () => {
-        location.href = "https://steamcommunity.com/id/kimyc1223?l=korean";
+        location.href =
+          "https://steamcommunity.com/profiles/76561198145809364/";
       });
 
-      aboutme_badge_assetstore = document.getElementById(
-        "aboutme_badge_assetstore"
-      );
-      aboutme_badge_assetstore.addEventListener("click", () => {
-        location.href = "https://assetstore.unity.com/publishers/73611";
-      });
+      // aboutme_badge_assetstore = document.getElementById(
+      //   "aboutme_badge_assetstore"
+      // );
+      // aboutme_badge_assetstore.addEventListener("click", () => {
+      //   location.href = "https://assetstore.unity.com/publishers/73611";
+      // });
     </script>
   </div>
 
