--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -20,10 +20,10 @@
           <span class="text_badge_head"><i class="fab fa-github-alt"></i></span>
           <span class="text_badge_content">github</span>
         </div>
-        <div class="text_badge" id="aboutme_badge_facebook">
+        <!-- <div class="text_badge" id="aboutme_badge_facebook">
           <span class="text_badge_head"><i class="fab fa-facebook-f"></i></span>
           <span class="text_badge_content">facebook</span>
-        </div>
+        </div> -->
         <div class="text_badge" id="aboutme_badge_linkedin">
           <span class="text_badge_head"
             ><i class="fab fa-linkedin-in"></i
@@ -40,12 +40,12 @@
           ></span>
           <span class="text_badge_content">steam</span>
         </div>
-        <div class="text_badge" id="aboutme_badge_assetstore">
+        <!-- <div class="text_badge" id="aboutme_badge_assetstore">
           <span class="text_badge_head"
             ><i class="fa-brands fa-unity"></i
           ></span>
           <span class="text_badge_content">Assetstore publisher profile</span>
-        </div>
+        </div> -->
       </div>
     </div>
 
