--- a/_includes/side_bar_right.html
+++ b/_includes/side_bar_right.html
@@ -6,7 +6,7 @@
   <div class="side_bar_category_div">
     <div class="side_bar_super_list" id="side_bar_profile">프로필</div>
     <div class="side_bar_super_list" id="side_bar_tech">
-      기술
+      블로그
       <div class="side_bar_post_count2">( {{ sorted.size }} )</div>
     </div>
     <div class="side_bar_sub_list" id="side_bar_ComputerVision">
