migrate hong chap2

--- a/_includes/main-banner.html
+++ b/_includes/main-banner.html
@@ -19,6 +19,9 @@
           더 나은 세상을 만드는 연구자가 되도록<br />
           늘 노력하겠습니다.
         </div>
+        <div>&nbsp;</div>
+        <div>&nbsp;</div>
+        <div>Currently Under Migrating</div>
       </div>
     </div>
   </div>
