--- a/_includes/side_bar_left.html
+++ b/_includes/side_bar_left.html
@@ -21,8 +21,8 @@
       Dankook University C&I Lab <br />Undergraduate Intern
     </div>
     <div class="side_bar_work_kr">
-      단국대학교 모바일시스템공학과 C&I Lab<br />
-      학부연구생
+      KAIST Geometric AI Lab<br />
+      Intern
     </div>
     <div class="side_bar_button" id="side_bar_enmail_1">
       <i class="far fa-envelope"></i> <span>chanho.park@dankook.ac.kr</span>
@@ -37,12 +37,12 @@
     <script>
       side_bar_enmail_1 = document.getElementById("side_bar_enmail_1");
       side_bar_enmail_1.addEventListener("click", () => {
-        location.href = "mailto:chanho.park@dankook.ac.kr";
+        location.href = "mailto:charlieppark@kaist.ac.kr";
       });
 
       side_bar_enmail_2 = document.getElementById("side_bar_enmail_2");
       side_bar_enmail_2.addEventListener("click", () => {
-        location.href = "mailto:chanho0309@gmail.com";
+        location.href = "mailto:charlieppark98@gmail.com";
       });
 
       side_bar_github = document.getElementById("side_bar_github");
