--- a/_includes/side_bar_left.html
+++ b/_includes/side_bar_left.html
@@ -18,17 +18,17 @@
     <div class="side_bar_nickname">charlieppark</div>
     <div class="side_bar_name">박찬호</div>
     <div class="side_bar_work_en">
-      Dankook University C&I Lab <br />Undergraduate Intern
+      KAIST Geometric AI Lab <br />Undergraduate Intern
     </div>
     <div class="side_bar_work_kr">
       KAIST Geometric AI Lab<br />
-      Intern
+      인턴
     </div>
     <div class="side_bar_button" id="side_bar_enmail_1">
-      <i class="far fa-envelope"></i> <span>chanho.park@dankook.ac.kr</span>
+      <i class="far fa-envelope"></i> <span>charlieppark@kaist.ac.kr</span>
     </div>
     <div class="side_bar_button" id="side_bar_enmail_2">
-      <i class="far fa-envelope"></i> <span>chanho0309@gmail.com</span>
+      <i class="far fa-envelope"></i> <span>charlieppark98@gmail.com</span>
     </div>
     <div class="side_bar_button" id="side_bar_github">
       <i class="fab fa-github-alt"></i> <span>GitHub Profile</span>
